2013-03-07  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
	    Tulio Magno Quites Machado Filho  <tuliom@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/multiarch/Makefile: New file.
	* sysdeps/powerpc/powerpc32/multiarch/ifunc-impl-list.c: Likewise.
	* sysdeps/powerpc/powerpc32/multiarch/memcpy.S: Likewise.
	* sysdeps/powerpc/powerpc32/a2/memcpy.S: Moved to...
	* sysdeps/powerpc/powerpc32/multiarch/memcpy-a2.S: ... here.
	* sysdeps/powerpc/powerpc32/cell/memcpy.S: Moved to...
	* sysdeps/powerpc/powerpc32/multiarch/memcpy-cell.S: ... here.
	* sysdeps/powerpc/powerpc32/power4/memcpy.S: Moved to...
	* sysdeps/powerpc/powerpc32/memcpy.S: ... here.
	* sysdeps/powerpc/powerpc32/power6/memcpy.S: Moved to...
	* sysdeps/powerpc/powerpc32/multiarch/memcpy-power6.S: ... here.
	* sysdeps/powerpc/powerpc32/power7/memcpy.S: Moved to...
	* sysdeps/powerpc/powerpc32/multiarch/memcpy-power7.S: ... here.

2013-03-07  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Add
	bits/mman-linux.h.

2013-03-07  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/ieee754/dbl-64/slowexp.c [!USE_LONG_DOUBLE_FOR_MP]:
	Include mpa.h and declare __MPEXP.
	[USE_LONG_DOUBLE_FOR_MP] (__slowexp): Call __IEEE754_EXPL.
	* sysdeps/powerpc/powerpc32/power4/fpu/Makefile
	(CPPFLAGS-slowexp.c): Define USE_LONG_DOUBLE_FOR_MP.
	* sysdeps/powerpc/powerpc32/power4/fpu/slowexp.c: Remove.
	* sysdeps/powerpc/powerpc64/power4/fpu/Makefile
	(CPPFLAGS-slowexp.c): Define USE_LONG_DOUBLE_FOR_MP.
	* sysdeps/powerpc/powerpc64/power4/fpu/slowexp.c: Remove.

	* sysdeps/ieee754/dbl-64/slowpow.c [USE_LONG_DOUBLE_FOR_MP]
	(__slowpow): Use long double EXPL and LOGL functions to
	compute POW.
	* sysdeps/powerpc/powerpc32/power4/fpu/Makefile
	(CPPFLAGS-slowpow.c): Define USE_LONG_DOUBLE_FOR_MP.
	* sysdeps/powerpc/powerpc32/power4/fpu/slowpow.c: Remove.
	* sysdeps/powerpc/powerpc64/power4/fpu/Makefile
	(CPPFLAGS-slowpow.c): Define USE_LONG_DOUBLE_FOR_MP.